# chriscarl.tools.house

./: .flake8  .gitignore  .pylintrc  .style.yapf  CHANGELOG.md  LICENSE  NOTES.md  README.md  pyproject.toml
apps/: selenium-playground.py
files/: 2026-01-12.csv  2026-01-12.json  house-links-2026-01.txt
src/chriscarl/tools/: house.py
tests/chriscarl/tools/: test_house.py
tests/collateral/: realtor.com.txt  zillow.com.txt
