[project]
name = "chriscarl-tools-house"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Carl",email = "chrisbcarl@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "chriscarl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
